--- a/src/build.xml
+++ b/src/build.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" ?>
-<project name="ssl-certificate-monitor" default="dist" basedir=".">
+<project name="crl-cert-file-monitor" default="dist" basedir=".">
 
 	<path id="compile.classpath">
 		<fileset dir="lib">
@@ -24,14 +24,14 @@
 	</target>
 
 	<target name="dist" depends="compile">
-		<zip destfile="dist/tmp/ssl-certificate-monitor.zip">
+		<zip destfile="dist/tmp/crl-cert-file-monitor.zip">
 			<zipfileset dir="classes" prefix="classes" />
 			<zipfileset dir="lib" prefix="lib" excludes="compile/**" />
 			<zipfileset dir="META-INF" prefix="classes/META-INF" />
 		</zip>
-		<zip destfile="../dist/ssl-certificate-monitor.zip">
+		<zip destfile="../dist/crl-cert-file-monitor.zip">
 			<zipfileset dir="definition" />
-			<zipfileset file="dist/tmp/ssl-certificate-monitor.zip" prefix="files/plugins/java" />
+			<zipfileset file="dist/tmp/crl-cert-file-monitor.zip" prefix="files/plugins/java" />
 		</zip>
 		<copy todir="../pkg">
 			<fileset dir="definition" />
